hugo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo-service
  namespace: default
spec:
  selector:
    app: hugo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
