mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: wordpress
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mariadb
